# filestorebot

./: bot.py  config.py  pip.py  pyproject.toml  replit_zip_error_log.txt  school.db
database/: database.py
plugins/: storefile.py
