[tool.poetry]
name = "repl_nix_FileStoreBot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.44"
pyromod = "^1.5"
Pyrogram = "^2.0.62"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
